@@ -811,5 +811,99 @@
         </plugins>
       </build>
     </profile>
+    <profile>
+      <!-- Pre-release profile for Docker builds. Only tags with the project version. -->
+      <id>dockerPreRelease</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>system-test</id>
+                <goals>
+                  <goal>integration-test</goal>
+                  <goal>verify</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <classesDirectory>${project.build.outputDirectory}</classesDirectory>
+              <includes>
+                <include>**/*.java</include>
+              </includes>
+              <groups>SystemTest</groups>
+              <systemPropertyVariables>
+                <pathling.systemTest.version>${git.commit.id}</pathling.systemTest.version>
+                <pathling.systemTest.auth.issuer>
+                  https://auth.ontoserver.csiro.au/auth/realms/aehrc
+                </pathling.systemTest.auth.issuer>
+                <pathling.systemTest.auth.clientId>pathling-test</pathling.systemTest.auth.clientId>
+                <pathling.systemTest.auth.requestedScope>
+                  openid user/*.*
+                </pathling.systemTest.auth.requestedScope>
+                <pathling.systemTest.terminology.serverUrl>
+                  https://tx.ontoserver.csiro.au/fhir
+                </pathling.systemTest.terminology.serverUrl>
+                <pathling.systemTest.dockerRepository>
+                  ${pathling.fhirServerDockerRepo}
+                </pathling.systemTest.dockerRepository>
+                <spring.profiles.active>system-test</spring.profiles.active>
+              </systemPropertyVariables>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>com.google.cloud.tools</groupId>
+            <artifactId>jib-maven-plugin</artifactId>
+            <version>${pathling.jibVersion}</version>
+            <configuration>
+              <from>
+                <image>${pathling.dockerBaseImage}</image>
+                <platforms>
+                  <platform>
+                    <architecture>amd64</architecture>
+                    <os>linux</os>
+                  </platform>
+                  <platform>
+                    <architecture>arm64</architecture>
+                    <os>linux</os>
+                  </platform>
+                </platforms>
+              </from>
+              <to>
+                <image>${pathling.fhirServerDockerRepo}</image>
+                <tags>
+                  <tag>${project.version}</tag>
+                </tags>
+              </to>
+              <container>
+                <jvmFlags>
+                  <jvmFlag>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</jvmFlag>
+                  <jvmFlag>--add-opens=java.base/java.net=ALL-UNNAMED</jvmFlag>
+                  <jvmFlag>--add-opens=java.base/sun.util.calendar=ALL-UNNAMED</jvmFlag>
+                </jvmFlags>
+              </container>
+            </configuration>
+            <executions>
+              <execution>
+                <id>build</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>dockerBuild</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>deploy</id>
+                <phase>deploy</phase>
+                <goals>
+                  <goal>build</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
   </profiles>
 </project>
